kubernetes/cloudjobs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudjobs-application
  labels:
    name: cloudjobs-application
    project: meicm-bm
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cloudjobs-application
  template:
    metadata:
      labels:
        name: cloudjobs-application
        project: meicm-bm
    spec:
      containers:
      - image: cloudjobs_app:1.0.0
        name: cloudjobs-application
        imagePullPolicy: Never
        resources: {}
        ports:
        - containerPort: 80
      restartPolicy: Always
